ci: fixes to dl

--- a/nicolaswalser.html
+++ b/nicolaswalser.html
@@ -62,18 +62,18 @@
     <legend><h4>Dev Terminology</h4></legend>
     <div>
       <ul>
-        <li>Function</li>
-          <p>In JavaScript, a <i>Function</i> is a block of code that performs a specific task or set of tasks and can be called or invoked by other parts of the program.</p>
-        <li>Let</li>
-          <p><i>Let</i> is a keyword used in JavaScript for creating variables that can be changed later on in the program. You can use let to declare a variable that only exists within a certain part of your code, like a function or a loop, and cannot be accessed from outside that part of your code.</p>
-        <li>Const</li>
-          <p><i>Const</i> is a keyword in JavaScript used for creating variables that cannot be reassigned a new value once they are initialized. It creates a read-only variable.</p>
-        <li>Div</li>
-          <p>In HTML, <i>Div</i> is a tag used to create a container or a block-level element that can be used to group other HTML elements together and apply styles or layout to them as a group. It is a commonly used tag in HTML for creating layout structures and organizing content.</p>
-        <li>Fieldset</li>
-          <p>In HTML, <i>Fieldset</i> is a tag used to group related form elements together and create a box around them with an optional legend. It's a semantic tag that helps in structuring and styling of forms.</p>
-        <li>Legend</li>
-          <p>In HTML, <i>Legend</i> is a tag used inside the <i>Fieldset</i> tag to provide a caption or title for the group of form elements enclosed within the <i>Fieldset</i>.</p>
+        <dt>Function</dt>
+          <dd>In JavaScript, a <i>Function</i> is a block of code that performs a specific task or set of tasks and can be called or invoked by other parts of the program.</dd>
+        <dt>Let</dt>
+          <dd><i>Let</i> is a keyword used in JavaScript for creating variables that can be changed later on in the program. You can use let to declare a variable that only exists within a certain part of your code, like a function or a loop, and cannot be accessed from outside that part of your code.</dd>
+        <dt>Const</dt>
+          <dd><i>Const</i> is a keyword in JavaScript used for creating variables that cannot be reassigned a new value once they are initialized. It creates a read-only variable.</dd>
+        <dt>Div</dt>
+          <dd>In HTML, <i>Div</i> is a tag used to create a container or a block-level element that can be used to group other HTML elements together and apply styles or layout to them as a group. It is a commonly used tag in HTML for creating layout structures and organizing content.</dd>
+        <dt>Fieldset</dt>
+          <dd>In HTML, <i>Fieldset</i> is a tag used to group related form elements together and create a box around them with an optional legend. It's a semantic tag that helps in structuring and styling of forms.</dd>
+        <dt>Legend</dt>
+          <dd>In HTML, <i>Legend</i> is a tag used inside the <i>Fieldset</i> tag to provide a caption or title for the group of form elements enclosed within the <i>Fieldset</i>.</dd>
       </ul>
     </div>
     </fieldset>
