ci: List and Divs

--- a/nicolaswalser.html
+++ b/nicolaswalser.html
@@ -5,133 +5,329 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="assets/img/icon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap"
+      rel="stylesheet"
+    />
     <title>Nicolas Walser</title>
   </head>
   <body>
-    <h1>Nicolas Walser</h1>
-    <img class="icon" src="assets/img/icon.png" alt="icon">
-    <h2><i>A deeper look</i></h2>
-    <hr/>
-    <h3>Catalogue</h3>
-    <ul>
-      <li>Biography</li>
-      <li>Achievments</li>
-      <li>Likes</li>
-      <li>Dev Terminology</li>
-      <li>Geography and Language</li>
-    </ul>
-  </body>
-    <fieldset>
-    <legend><h4>Biography</h4></legend>
-    <div>
-      Nicolas Walser grew up in Asia with a diverse and multicultural background, which sparked his curiosity about the world and led him to develop an interest in psychological issues and philosophical ideas. Currently, he is focused on personal growth and understanding, and seeks inspiration and rejuvenation in nature. He enjoys playing guitar and spending time with friends, and hopes to find happiness and fulfillment while continuing to learn and grow.
-    </div>
-    </fieldset>
-    <fieldset>
-    <legend><h4>Acheivments</h4></legend>
-    <div>
-      Nicolas Walser has achieved a great deal throughout his life, including learning four languages - English, Spanish, German, and Indonesian - which has allowed him to communicate and connect with people from various cultural backgrounds. In addition, he has lived abroad alone for more than four years, demonstrating a strong sense of independence and adaptability. Despite encountering failures and setbacks, Nicolas has maintained a hopeful perspective, using those experiences as opportunities for growth and learning. These achievements reflect his determination, resilience, and passion for personal development.
-    </div>
-    </fieldset>
-    <fieldset>
-    <legend><h4>Likes</h4></legend>
-    <div>
-      <p>Drinks</p>
+    <header>
+      <h1>Nicolas Walser</h1>
+      <img class="icon" src="assets/img/icon.png" alt="icon" />
+      <h2><i>A deeper look</i></h2>
+    </header>
+
+    <hr />
+    <aside>
+      <h3>Catalogue</h3>
       <ul>
-        <li>Water</li>
-        <li>Sparkling Water</li>
-        <li>Cucumber with Chia</li>
-        <li>Guayaba Juice</li>
-        <li>Orange Juice</li>
-        <li>Watermelon Juice</li>
+        <li>Biography</li>
+        <li>Achievments</li>
+        <li>Likes</li>
+        <li>Dev Terminology</li>
+        <li>Geography and Language</li>
+        <li>Members and Info</li>
       </ul>
-      <p>Music</p>
-            <ol>
-        <li><a href="https://www.youtube.com/watch?v=8h0eZjnO5Mw">Mainies - Matt Corby</a></li>
-        <li><a href="https://www.youtube.com/watch?v=x11NA63gLDM">Change the World - Eric Clapton</a></li>
-        <li><a href="https://www.youtube.com/watch?v=pHOTPmrxSpc">Katmandu - Cat Stevens</a></li>
-        <li><a href="https://www.youtube.com/watch?v=fsu5ZZwzFyk">Would That I - Hozier</a></li>
-        <li><a href="https://www.youtube.com/watch?v=sI0TeFf6uD8">Broken Halos - Chris Stapleton</a></li>
-      </ol>
-    </div>
-    </fieldset>
-    <fieldset>
-    <legend><h4>Dev Terminology</h4></legend>
-    <div>
-      <ul>
-        <dt>Function</dt>
-          <dd>In JavaScript, a <i>Function</i> is a block of code that performs a specific task or set of tasks and can be called or invoked by other parts of the program.</dd>
-        <dt>Let</dt>
-          <dd><i>Let</i> is a keyword used in JavaScript for creating variables that can be changed later on in the program. You can use let to declare a variable that only exists within a certain part of your code, like a function or a loop, and cannot be accessed from outside that part of your code.</dd>
-        <dt>Const</dt>
-          <dd><i>Const</i> is a keyword in JavaScript used for creating variables that cannot be reassigned a new value once they are initialized. It creates a read-only variable.</dd>
-        <dt>Div</dt>
-          <dd>In HTML, <i>Div</i> is a tag used to create a container or a block-level element that can be used to group other HTML elements together and apply styles or layout to them as a group. It is a commonly used tag in HTML for creating layout structures and organizing content.</dd>
-        <dt>Fieldset</dt>
-          <dd>In HTML, <i>Fieldset</i> is a tag used to group related form elements together and create a box around them with an optional legend. It's a semantic tag that helps in structuring and styling of forms.</dd>
-        <dt>Legend</dt>
-          <dd>In HTML, <i>Legend</i> is a tag used inside the <i>Fieldset</i> tag to provide a caption or title for the group of form elements enclosed within the <i>Fieldset</i>.</dd>
-      </ul>
-    </div>
-    </fieldset>
-    <fieldset>
-    <legend><h4>Geography and Language</h4></legend>
-    <div>
-      <ol>
-        <li>Mexico</li>
+    </aside>
+    <main>
+      <fieldset>
+        <legend><h4>Biography</h4></legend>
+        <div>
+          Nicolas Walser grew up in Asia with a diverse and multicultural
+          background, which sparked his curiosity about the world and led him to
+          develop an interest in psychological issues and philosophical ideas.
+          Currently, he is focused on personal growth and understanding, and
+          seeks inspiration and rejuvenation in nature. He enjoys playing guitar
+          and spending time with friends, and hopes to find happiness and
+          fulfillment while continuing to learn and grow.
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend><h4>Acheivments</h4></legend>
+        <div>
+          Nicolas Walser has achieved a great deal throughout his life,
+          including learning four languages - English, Spanish, German, and
+          Indonesian - which has allowed him to communicate and connect with
+          people from various cultural backgrounds. In addition, he has lived
+          abroad alone for more than four years, demonstrating a strong sense of
+          independence and adaptability. Despite encountering failures and
+          setbacks, Nicolas has maintained a hopeful perspective, using those
+          experiences as opportunities for growth and learning. These
+          achievements reflect his determination, resilience, and passion for
+          personal development.
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend><h4>Likes</h4></legend>
+        <div>
+          <p>Drinks</p>
           <ul>
-            <li>Colima</li>
-              <ul>
-                <li>Spanish</li>
-              </ul>
-            <li>Guadalajara</li>
-              <ul>
-                <li>Spanish</li>
-              </ul>
+            <li>Water</li>
+            <li>Sparkling Water</li>
+            <li>Cucumber with Chia</li>
+            <li>Guayaba Juice</li>
+            <li>Orange Juice</li>
+            <li>Watermelon Juice</li>
           </ul>
-        <li>Switzerland</li>
+          <p>Music</p>
+          <ol>
+            <li>
+              <a
+                href="https://www.youtube.com/watch?v=8h0eZjnO5Mw"
+                target="
+              "
+                >Mainies - Matt Corby</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/watch?v=x11NA63gLDM"
+                target="
+              "
+                >Change the World - Eric Clapton</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/watch?v=pHOTPmrxSpc"
+                target="
+              "
+                >Katmandu - Cat Stevens</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/watch?v=fsu5ZZwzFyk"
+                target="
+              "
+                >Would That I - Hozier</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/watch?v=sI0TeFf6uD8"
+                target="
+              "
+                >Broken Halos - Chris Stapleton</a
+              >
+            </li>
+          </ol>
+        </div>
+      </fieldset>
+    </main>
+    <section>
+      <fieldset>
+        <legend><h4>Dev Terminology</h4></legend>
+        <div>
           <ul>
-            <li>Baden</li>
+            <dt>Function</dt>
+            <dd>
+              In JavaScript, a <i>Function</i> is a block of code that performs
+              a specific task or set of tasks and can be called or invoked by
+              other parts of the program.
+            </dd>
+            <dt>Let</dt>
+            <dd>
+              <i>Let</i> is a keyword used in JavaScript for creating variables
+              that can be changed later on in the program. You can use let to
+              declare a variable that only exists within a certain part of your
+              code, like a function or a loop, and cannot be accessed from
+              outside that part of your code.
+            </dd>
+            <dt>Const</dt>
+            <dd>
+              <i>Const</i> is a keyword in JavaScript used for creating
+              variables that cannot be reassigned a new value once they are
+              initialized. It creates a read-only variable.
+            </dd>
+            <dt>Div</dt>
+            <dd>
+              In HTML, <i>Div</i> is a tag used to create a container or a
+              block-level element that can be used to group other HTML elements
+              together and apply styles or layout to them as a group. It is a
+              commonly used tag in HTML for creating layout structures and
+              organizing content.
+            </dd>
+            <dt>Fieldset</dt>
+            <dd>
+              In HTML, <i>Fieldset</i> is a tag used to group related form
+              elements together and create a box around them with an optional
+              legend. It's a semantic tag that helps in structuring and styling
+              of forms.
+            </dd>
+            <dt>Legend</dt>
+            <dd>
+              In HTML, <i>Legend</i> is a tag used inside the
+              <i>Fieldset</i> tag to provide a caption or title for the group of
+              form elements enclosed within the <i>Fieldset</i>.
+            </dd>
+          </ul>
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend><h4>Geography and Language</h4></legend>
+        <div>
+          <ol>
+            <li>Mexico</li>
+            <ul>
+              <li>Colima</li>
+              <ul>
+                <li>Spanish</li>
+              </ul>
+              <li>Guadalajara</li>
+              <ul>
+                <li>Spanish</li>
+              </ul>
+            </ul>
+            <li>Switzerland</li>
+            <ul>
+              <li>Baden</li>
               <ul>
                 <li>Swiss-German</li>
               </ul>
-          </ul>        
-        <li>Sri Lanka</li>
-          <ul>
-            <li>Colombo</li>
+            </ul>
+            <li>Sri Lanka</li>
+            <ul>
+              <li>Colombo</li>
               <ul>
                 <li>English</li>
-                <li>Sinhala</li>                
+                <li>Sinhala</li>
               </ul>
-          </ul>                
-        <li>Indonesia</li>
-          <ul>
-            <li>Jakarta</li>
+            </ul>
+            <li>Indonesia</li>
+            <ul>
+              <li>Jakarta</li>
               <ul>
                 <li>English</li>
-                <li>Bahasa Indonesia</li>                
+                <li>Bahasa Indonesia</li>
               </ul>
-          </ul>                        
-        <li>The United States of America</li>
-          <ul>
-            <li>Katy, Texas</li>
+            </ul>
+            <li>The United States of America</li>
+            <ul>
+              <li>Katy, Texas</li>
               <ul>
                 <li>English</li>
-                <li>Spanish</li>                
+                <li>Spanish</li>
               </ul>
-          </ul>                        
-        <li>Canada</li>
-          <ul>
-            <li>Vancouver</li>
+            </ul>
+            <li>Canada</li>
+            <ul>
+              <li>Vancouver</li>
               <ul>
                 <li>English</li>
               </ul>
-          </ul>                        
-      </ol>
-    </div>
-    </fieldset>
+            </ul>
+          </ol>
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend><h4>Family Members</h4></legend>
+        <div>
+          <h3>Family Members and Stats</h3>
+          <table>
+            <thead>
+              <tr>
+                <th>Names:</th>
+                <th>Alejandra</th>
+                <th>Michelle</th>
+                <th>Fernando</th>
+                <th>Nicolas</th>
+                <th>Lola</th>
+                <th>Mila</th>
+                <th>Tyson</th>
+                <th>Max</th>
+                <th>Mavic</th>
+                <th>Dali</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Species:</th>
+                <td colspan="4">Human</td>
+                <td colspan="5">Dog</td>
+                <td>Cat</td>
+              </tr>
+              <tr>
+                <th>Sex:</th>
+                <td colspan="2">Female</td>
+                <td colspan="2">Male</td>
+                <td colspan="2">Female</td>
+                <td colspan="4">Male</td>
+              </tr>
+              <tr>
+                <th>Age:</th>
+                <td>60 y/o</td>
+                <td>27 y/o</td>
+                <td>29 y/o</td>
+                <td>25 y/o</td>
+                <td>15 y/o</td>
+                <td>11 y/o</td>
+                <td>8 y/o</td>
+                <td>6 y/o</td>
+                <td>4 y/o</td>
+                <td>1 y/o</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div>
+          <h3>Family Activities</h3>
+          <table class="table-likes">
+            <thead>
+              <tr>
+                <th colspan="5">Weekday Hobbies</th>
+                <th colspan="2">Weekend Hobbies</th>
+              </tr>
+              <tr>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+                <th>Sunday</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Walking</td>
+                <td>Walking</td>
+                <td>Swimming</td>
+                <td>Walking</td>
+                <td>Cooking</td>
+                <td rowspan="2">Movies</td>
+                <td rowspan="4">Sleeping</td>
+              </tr>
+              <tr>
+                <td>Video games</td>
+                <td>Swimming</td>
+                <td>Photography</td>
+                <td rowspan="2">Movies</td>
+                <td>Walking</td>
+              </tr>
+              <tr>
+                <td>Sleeping</td>
+                <td>Walking</td>
+                <td>Walking</td>
+                <td>Swimming</td>
+                <td>Sleeping</td>
+              </tr>
+              <tr>
+                <td>Studying</td>
+                <td>Swimming</td>
+                <td>Running</td>
+                <td>Walking</td>
+                <td>Running</td>
+                <td>Movies</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </fieldset>
+    </section>
   </body>
 </html>
