ci: box model from FCC

--- a/nicolaswalser.html
+++ b/nicolaswalser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/Styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" href="assets/img/icon.png" />
@@ -30,6 +30,14 @@
         <li>Dev Terminology</li>
         <li>Geography and Language</li>
         <li>Members and Info</li>
+        <li>
+          <a
+            href="questions.html"
+            target="
+          "
+            >Ask Nicolas a question</a
+          >
+        </li>
       </ul>
     </aside>
     <main>
@@ -77,49 +85,51 @@
               <li>Orange Juice</li>
               <li>Watermelon Juice</li>
             </ul>
-            <p>Music</p>
-            <ol>
-              <li>
-                <a
-                  href="https://www.youtube.com/watch?v=8h0eZjnO5Mw"
-                  target="
+            <p>Top 5 Songs</p>
+            <nav>
+              <ol>
+                <li>
+                  <a
+                    href="https://www.youtube.com/watch?v=8h0eZjnO5Mw"
+                    target="
                 "
-                  >Mainies - Matt Corby</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.youtube.com/watch?v=x11NA63gLDM"
-                  target="
+                    >Mainies - Matt Corby</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.youtube.com/watch?v=x11NA63gLDM"
+                    target="
                 "
-                  >Change the World - Eric Clapton</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.youtube.com/watch?v=pHOTPmrxSpc"
-                  target="
+                    >Change the World - Eric Clapton</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.youtube.com/watch?v=pHOTPmrxSpc"
+                    target="
                 "
-                  >Katmandu - Cat Stevens</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.youtube.com/watch?v=fsu5ZZwzFyk"
-                  target="
+                    >Katmandu - Cat Stevens</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.youtube.com/watch?v=fsu5ZZwzFyk"
+                    target="
                 "
-                  >Would That I - Hozier</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.youtube.com/watch?v=sI0TeFf6uD8"
-                  target="
+                    >Would That I - Hozier</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.youtube.com/watch?v=sI0TeFf6uD8"
+                    target="
                 "
-                  >Broken Halos - Chris Stapleton</a
-                >
-              </li>
-            </ol>
+                    >Broken Halos - Chris Stapleton</a
+                  >
+                </li>
+              </ol>
+            </nav>
           </div>
         </fieldset>
       </article>
